Добавлен функционал для осмотров
+ добавлены карточки осмотров
+ добавлен сервис для осмотров
+ 1 одно окно (информация по осмотрам)
+ отредактирован стиль карточек (контент растянут по всему контейнеру)
+ изменена логика выбора занятого дня по слотам для принятия заявки
+ другие незначительные изменения

--- a/CarAccountingGibdd/CarAccountingGibdd/Styles/BaseStyles.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Styles/BaseStyles.xaml
@@ -837,8 +837,8 @@
                             SnapsToDevicePixels="True"
                             CornerRadius="10">
 
-                        <ContentPresenter VerticalAlignment="Center"
-                                          HorizontalAlignment="Center">
+                        <ContentPresenter VerticalAlignment="Stretch"
+                                          HorizontalAlignment="Stretch">
                         </ContentPresenter>
                     </Border>
 
