--- a/CarAccountingGibdd/CarAccountingGibdd/Controls/InspectionCard.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Controls/InspectionCard.xaml
@@ -1,17 +1,15 @@
-﻿<UserControl x:Class="CarAccountingGibdd.Controls.ApplicationCard"
+﻿<UserControl x:Class="CarAccountingGibdd.Controls.InspectionCard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CarAccountingGibdd.Controls"
              mc:Ignorable="d">
-    
+
     <Button Margin="0 0 16 16"
             Style="{StaticResource Button.Card}"
             Click="Card_Click">
-        
         <Grid>
-            
             <Border>
                 <Border.Effect>
                     <StaticResource ResourceKey="Shadow.Small.Effect"/>
@@ -27,24 +25,24 @@
                     <TextBlock Style="{StaticResource TextBlock.H2}"
                                DockPanel.Dock="Top"
                                Margin="0 0 0 24">
-                    <Run Text="Заявка"/>
-                    <Run Text="{Binding ApplicationId, StringFormat={}№{0}}"/>
+                    <Run Text="Инспекция"/>
+                    <Run Text="{Binding InspectionId, StringFormat={}№{0}}"/>
                     </TextBlock>
 
                     <!-- Описание -->
                     <TextBlock DockPanel.Dock="Top"
                                Margin="0 0 0 12"
                                TextWrapping="Wrap">
-                    <Run Text="Владелец:" Style="{StaticResource Run.Subtitle}"/>
-                    <Run Text="{Binding Owner.FIname, Mode=OneWay}"
+                    <Run Text="Заявка:" Style="{StaticResource Run.Subtitle}"/>
+                    <Run Text="{Binding ApplicationId, StringFormat={}№{0}}"
                          Style="{StaticResource Run.Description}"/>
                     </TextBlock>
 
                     <TextBlock DockPanel.Dock="Top"
                                Margin="0 0 0 12"
                                TextWrapping="Wrap">
-                    <Run Text="Телефон:" Style="{StaticResource Run.Subtitle}"/>
-                    <Run Text="{Binding Owner.Phone}"
+                    <Run Text="Владелец:" Style="{StaticResource Run.Subtitle}"/>
+                    <Run Text="{Binding Application.Owner.FIname, Mode=OneWay}"
                          Style="{StaticResource Run.Description}"/>
                     </TextBlock>
 
@@ -52,23 +50,23 @@
                                Margin="0 0 0 12"
                                TextWrapping="Wrap">
                     <Run Text="Автомобиль:" Style="{StaticResource Run.Subtitle}"/>
-                    <Run Text="{Binding Vehicle.Info, Mode=OneWay}"
+                    <Run Text="{Binding Application.Vehicle.Info, Mode=OneWay}"
                          Style="{StaticResource Run.Description}"/>
                     </TextBlock>
 
                     <TextBlock DockPanel.Dock="Top"
                                Margin="0 0 0 12"
                                TextWrapping="Wrap">
-                    <Run Text="ВИН:" Style="{StaticResource Run.Subtitle}"/>
-                    <Run Text="{Binding Vehicle.Vin}"
+                    <Run Text="Инспектор:" Style="{StaticResource Run.Subtitle}"/>
+                    <Run Text="{Binding Inspector.FIname, Mode=OneWay}"
                          Style="{StaticResource Run.Description}"/>
                     </TextBlock>
 
                     <TextBlock DockPanel.Dock="Top"
                                Margin="0 0 0 12"
                                TextWrapping="Wrap">
-                    <Run Text="Дата подачи:" Style="{StaticResource Run.Subtitle}"/>
-                    <Run Text="{Binding DatetimeSupply, StringFormat={}{0:dd.MM.yyyy}}"
+                    <Run Text="Дата осмотра:" Style="{StaticResource Run.Subtitle}"/>
+                    <Run Text="{Binding DatetimePlanned, StringFormat={}{0:dd.MM.yyyy}}"
                          Style="{StaticResource Run.Description}"/>
                     </TextBlock>
 
@@ -76,16 +74,16 @@
                                Margin="0 0 0 24"
                                TextWrapping="Wrap">
                     <Run Text="Статус:" Style="{StaticResource Run.Subtitle}"/>
-                    <Run Text="{Binding ApplicationStatus.Name}"
+                    <Run Text="{Binding Status.Name}"
                          Style="{StaticResource Run.Description}"/>
                     </TextBlock>
 
                     <!-- КНОПКИ -->
                     <Grid DockPanel.Dock="Bottom"
                           Width="Auto">
-                        
+
                         <!-- ОПЕРАТОР (подтверждение) -->
-                        <DockPanel Name="confirmationBTNS"
+                        <DockPanel Name="startInspectionBTNS"
                                    Visibility="Collapsed">
 
                             <Button Style="{StaticResource Button.Icon.Large}"
@@ -93,31 +91,26 @@
                                     DockPanel.Dock="Right"
                                     Click="Reject_Click"/>
 
-                            <Button Style="{StaticResource Button.Icon.Large}"
-                                    Margin="0 0 12 0"
-                                    Tag="editOutline"
-                                    DockPanel.Dock="Right"
-                                    Click="Edit_Click"/>
-
                             <!-- Смена статуса -->
                             <Button Style="{StaticResource Button.Primary.Icon}"
                                     Margin="0 0 12 0"
-                                    Content="Подтвердить"
-                                    DockPanel.Dock="Right"
-                                    Tag="check"
-                                    Click="Confirm_Click"/>
+                                    Content="Начать осмотр"
+                                    Tag="TextBoxSearchOutline"
+                                    Click="StartInspection_Click"/>
                         </DockPanel>
 
                         <!-- ИНСПЕКТОР (принятие)  -->
                         <Button Style="{StaticResource Button.Primary.Icon}"
+                                DockPanel.Dock="Bottom"
                                 Visibility="Collapsed"
-                                Name="acceptForInspectionBTN"
-                                Content="Принять на осмотр"
+                                Name="endInspectionBTN"
+                                Content="Завершить инспекцию"
                                 Tag="check"
-                                Click="AcceptForInspectionBTN_Click"/>                        
+                                Click="EndInspection_Click"/>
 
                         <!-- ВСЕ (инфо) (прозрачность 50%) -->
                         <Button Style="{StaticResource Button.Primary.Icon}"
+                                DockPanel.Dock="Bottom"
                                 Visibility="Collapsed"
                                 Name="infoBTN"
                                 Content="Информация"
