--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoInspectionDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoInspectionDialog.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="CarAccountingGibdd.Dialogs.InfoApplicationDialog"
+﻿<Window x:Class="CarAccountingGibdd.Dialogs.InfoInspectionDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CarAccountingGibdd.Dialogs"
         mc:Ignorable="d"
-        
+       
         xmlns:cnvrt="clr-namespace:CarAccountingGibdd.Classes.Converters"
         
-        Title="Информация по заявке" 
+        Title="Информация по инспекции" 
         SizeToContent="Height"
         MinHeight="500"
         MinWidth="700" Width="1000"
@@ -25,8 +25,8 @@
                 <TextBlock Style="{StaticResource TextBlock.H2}"
                        DockPanel.Dock="Top"
                        Margin="0 0 0 24">
-                <Run Text="Данные о заявке"/>
-                <Run Text="{Binding ApplicationId, StringFormat={}№{0}}"/>
+                <Run Text="Данные о проведении инспекции"/>
+                <Run Text="{Binding InspectionId, StringFormat={}№{0}}"/>
                 </TextBlock>
 
                 <Grid>
@@ -37,12 +37,12 @@
 
                     <!-- Первая колонка -->
                     <StackPanel Margin="0 0 24 0">
-                        
+
                         <DockPanel DockPanel.Dock="Top"
                                    Margin="0 0 0 24"
                                    Grid.Column="0"
                                    LastChildFill="False">
-                            
+
                             <!-- Описание владельца -->
                             <TextBlock Style="{StaticResource TextBlock.H3}"
                                        DockPanel.Dock="Top"
@@ -54,7 +54,7 @@
                                        Margin="0 0 0 12"
                                        TextWrapping="Wrap">
                                 <Run Text="ФИО:" Style="{StaticResource Run.Subtitle}"/>
-                                <Run Text="{Binding Owner.Fullname, Mode=OneWay}"
+                                <Run Text="{Binding Application.Owner.Fullname, Mode=OneWay}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
 
@@ -62,7 +62,7 @@
                                        Margin="0 0 0 12"
                                        TextWrapping="Wrap">
                                 <Run Text="Дата рождения:" Style="{StaticResource Run.Subtitle}"/>
-                                <Run Text="{Binding Owner.Birthdate, StringFormat={}{0:dd.MM.yyyy}}"
+                                <Run Text="{Binding Application.Owner.Birthdate, StringFormat={}{0:dd.MM.yyyy}}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
 
@@ -70,7 +70,7 @@
                                        Margin="0 0 0 12"
                                        TextWrapping="Wrap">
                                 <Run Text="Серия и номер паспорта:" Style="{StaticResource Run.Subtitle}"/>
-                                <Run Text="{Binding Owner.Passport}"
+                                <Run Text="{Binding Application.Owner.Passport}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
 
@@ -78,7 +78,7 @@
                                        Margin="0 0 0 12"
                                        TextWrapping="Wrap">
                                 <Run Text="Номер телефона:" Style="{StaticResource Run.Subtitle}"/>
-                                <Run Text="{Binding Owner.Phone}"
+                                <Run Text="{Binding Application.Owner.Phone}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
 
@@ -86,7 +86,7 @@
                                        Margin="0 0 0 12"
                                        TextWrapping="Wrap">
                                 <Run Text="Адрес проживания:" Style="{StaticResource Run.Subtitle}"/>
-                                <Run Text="{Binding Owner.Address}"
+                                <Run Text="{Binding Application.Owner.Address}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
                         </DockPanel>
@@ -95,7 +95,7 @@
                         <DockPanel DockPanel.Dock="Top"
                                    Grid.Column="0"
                                    LastChildFill="False">
-                            
+
                             <!-- Описание владельца -->
                             <TextBlock Style="{StaticResource TextBlock.H3}"
                                        DockPanel.Dock="Top"
@@ -108,7 +108,7 @@
                                        Margin="0 0 0 12"
                                        TextWrapping="Wrap">
                                 <Run Text="Вин:" Style="{StaticResource Run.Subtitle}"/>
-                                <Run Text="{Binding Vehicle.Vin}"
+                                <Run Text="{Binding Application.Vehicle.Vin}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
 
@@ -116,7 +116,7 @@
                                        Margin="0 0 0 12"
                                        TextWrapping="Wrap">
                                 <Run Text="Номерной знак:" Style="{StaticResource Run.Subtitle}"/>
-                                <Run Text="{Binding Vehicle.LicensePlate, TargetNullValue='Не зарегистрирован'}"
+                                <Run Text="{Binding Application.Vehicle.LicensePlate, TargetNullValue='Не зарегистрирован'}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
 
@@ -124,7 +124,7 @@
                                        Margin="0 0 0 12"
                                        TextWrapping="Wrap">
                                 <Run Text="Марка:" Style="{StaticResource Run.Subtitle}"/>
-                                <Run Text="{Binding Vehicle.Brand}"
+                                <Run Text="{Binding Application.Vehicle.Brand}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
 
@@ -132,7 +132,7 @@
                                        Margin="0 0 0 12"
                                        TextWrapping="Wrap">
                                 <Run Text="Модель:" Style="{StaticResource Run.Subtitle}"/>
-                                <Run Text="{Binding Vehicle.Model}"
+                                <Run Text="{Binding Application.Vehicle.Model}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
 
@@ -140,7 +140,7 @@
                                        Margin="0 0 0 12"
                                        TextWrapping="Wrap">
                                 <Run Text="Год:" Style="{StaticResource Run.Subtitle}"/>
-                                <Run Text="{Binding Vehicle.Year}"
+                                <Run Text="{Binding Application.Vehicle.Year}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
 
@@ -148,7 +148,7 @@
                                    Margin="0 0 0 12"
                                    TextWrapping="Wrap">
                                 <Run Text="Цвет:" Style="{StaticResource Run.Subtitle}"/>
-                                <Run Text="{Binding Vehicle.Color}"
+                                <Run Text="{Binding Application.Vehicle.Color}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
 
@@ -156,7 +156,7 @@
                                        Margin="0 0 0 12"
                                        TextWrapping="Wrap">
                                 <Run Text="Тип:" Style="{StaticResource Run.Subtitle}"/>
-                                <Run Text="{Binding Vehicle.VehicleType.Name}"
+                                <Run Text="{Binding Application.Vehicle.VehicleType.Name}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
 
@@ -164,7 +164,7 @@
                                        Margin="0 0 0 12"
                                        TextWrapping="Wrap">
                                 <Run Text="Пользованный:" Style="{StaticResource Run.Subtitle}"/>
-                                <Run Text="{Binding Vehicle.UsedValueString, Mode=OneWay}"
+                                <Run Text="{Binding Application.Vehicle.UsedValueString, Mode=OneWay}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
                         </DockPanel>
@@ -174,12 +174,12 @@
                     <DockPanel DockPanel.Dock="Top"
                                Grid.Column="2"
                                LastChildFill="False">
-                        
+
                         <!-- Описание заявки -->
                         <TextBlock Style="{StaticResource TextBlock.H3}"
                                    DockPanel.Dock="Top"
                                    Foreground="{StaticResource Text.Primary.Brush}"
-                                   Text="Заявка"
+                                   Text="Осмотр"
                                    TextWrapping="Wrap"
                                    Margin="0 0 0 18"/>
 
@@ -187,26 +187,16 @@
                                    Margin="0 0 0 12"
                                    TextWrapping="Wrap">
                             <Run Text="Статус:" Style="{StaticResource Run.Subtitle}"/>
-                            <Run Text="{Binding ApplicationStatus.Name}"
+                            <Run Text="{Binding Status.Name}"
                                     Style="{StaticResource Run.Description}"/>
                         </TextBlock>
 
                         <TextBlock DockPanel.Dock="Top"
                                    Margin="0 0 0 12"
                                    TextWrapping="Wrap">
-                            <Run Text="Дата подачи:" Style="{StaticResource Run.Subtitle}"/>
-                            <Run Text="{Binding DatetimeSupply, StringFormat={}{0:dd.MM.yyyy HH:mm}}"
-                                 Style="{StaticResource Run.Description}"/>
-                        </TextBlock>
-
-                        <TextBlock DockPanel.Dock="Top"
-                                   Margin="0 0 0 12"
-                                   TextWrapping="Wrap">
-                            <Run Text="Дата подтверждения:" 
-                                 Style="{StaticResource Run.Subtitle}"
-                                 Name="datetimeConfirmTB"/>
-                            <Run Text="{Binding DatetimeConfirm, StringFormat={}{0:dd.MM.yyyy HH:mm}, TargetNullValue='Не подтверждена'}"
-                                 Style="{StaticResource Run.Description}"/>
+                            <Run Text="Номер заявки:" Style="{StaticResource Run.Subtitle}"/>
+                            <Run Text="{Binding Application.ApplicationId}"
+                                    Style="{StaticResource Run.Description}"/>
                         </TextBlock>
 
                         <TextBlock DockPanel.Dock="Top"
@@ -215,7 +205,7 @@
                             <Run Text="Дата принятия на осмотр:" 
                                  Style="{StaticResource Run.Subtitle}"
                                  Name="datetimeInspectionTB"/>
-                            <Run Text="{Binding DatetimeAccept, StringFormat={}{0:dd.MM.yyyy HH:mm}, TargetNullValue='Не принята'}"
+                            <Run Text="{Binding Application.DatetimeAccept, StringFormat={}{0:dd.MM.yyyy HH:mm}}"
                                  Style="{StaticResource Run.Description}"/>
                         </TextBlock>
 
@@ -224,31 +214,16 @@
                                    TextWrapping="Wrap">
                             <Run Text="Дата проведения осмотра:" 
                                  Style="{StaticResource Run.Subtitle}"/>
-                            <Run Text="{Binding InspectionDate, StringFormat={}{0:dd.MM.yyyy HH:mm}, Mode=OneWay}"
+                            <Run Text="{Binding DatetimePlanned, StringFormat={}{0:dd.MM.yyyy HH:mm}}"
                                  Style="{StaticResource Run.Description}"/>
                         </TextBlock>
 
                         <TextBlock DockPanel.Dock="Top"
                                    Margin="0 0 0 12"
                                    TextWrapping="Wrap">
-                            <Run Text="Номер платежа:" Style="{StaticResource Run.Subtitle}"/>
-                            <Run Text="{Binding PaymentStatusNumber, Mode=OneWay}"
-                                 Style="{StaticResource Run.Description}"/>
-                        </TextBlock>
-
-                        <TextBlock DockPanel.Dock="Top"
-                                   Margin="0 0 0 12"
-                                   TextWrapping="Wrap">
-                            <Run Text="Статус платежа:" Style="{StaticResource Run.Subtitle}"/>
-                            <Run Text="{Binding PaymentStatusName, Mode=OneWay}"
-                                 Style="{StaticResource Run.Description}"/>
-                        </TextBlock>
-
-                        <TextBlock DockPanel.Dock="Top"
-                                   Margin="0 0 0 12"
-                                   TextWrapping="Wrap">
-                            <Run Text="Номер инспекции:" Style="{StaticResource Run.Subtitle}"/>
-                            <Run Text="{Binding InspectionNumber, Mode=OneWay}"
+                            <Run Text="Дата завершения осмотра:" 
+                                 Style="{StaticResource Run.Subtitle}"/>
+                            <Run Text="{Binding DatetimeCompleted, StringFormat={}{0:dd.MM.yyyy HH:mm}, TargetNullValue='Не завершен'}"
                                  Style="{StaticResource Run.Description}"/>
                         </TextBlock>
 
@@ -256,15 +231,15 @@
                                    Margin="0 0 0 12"
                                    TextWrapping="Wrap">
                             <Run Text="ФИО инспектора:" Style="{StaticResource Run.Subtitle}"/>
-                            <Run Text="{Binding InspectorFullname, Mode=OneWay}"
+                            <Run Text="{Binding Inspector.Fullname, Mode=OneWay}"
                                  Style="{StaticResource Run.Description}"/>
                         </TextBlock>
 
                         <TextBlock DockPanel.Dock="Top"
                                    Margin="0 0 0 12"
                                    TextWrapping="Wrap">
-                            <Run Text="ФИО оператора:" Style="{StaticResource Run.Subtitle}"/>
-                            <Run Text="{Binding OperatorFullname, Mode=OneWay}"
+                            <Run Name="titleInfoDocumentTB" Style="{StaticResource Run.Subtitle}"/>
+                            <Run Name="infoDocumentTB"
                                  Style="{StaticResource Run.Description}"/>
                         </TextBlock>
 
