--- a/CarAccountingGibdd/CarAccountingGibdd/Windows/NavWindowAdmin.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Windows/NavWindowAdmin.xaml
@@ -99,7 +99,7 @@
                                 Margin="0 0 0 28">
 
                         <icons:PackIcon Style="{StaticResource Icon.Large}"
-                                        Kind="shieldAccountOutline"
+                                        Kind="ShieldAccount"
                                         Margin="0 0 10 0"
                                         Foreground="{StaticResource Text.Secondary.Brush}"/>
 
