--- a/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesInspector/ViolationsInspectionsPageInspector.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesInspector/ViolationsInspectionsPageInspector.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CarAccountingGibdd.Pages.PagesInspector.InspectonPageInspector"
+﻿<Page x:Class="CarAccountingGibdd.Pages.PagesInspector.ViolationsInspectionsPageInspector"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -67,7 +67,7 @@
                     </ItemsControl>
                 </ScrollViewer>
 
-                <TextBlock Text="Данные об инспекциях отсутствуют"
+                <TextBlock Text="Данные об нарушениях в инспекциях   отсутствуют"
                            Style="{StaticResource TextBlock.H2}"
                            Visibility="{Binding Items.Count, ElementName=cardsIC, 
                            Converter={x:Static converters:IntToVisibilityConverter.Instance } }"/>
